syntax = "proto3";

package yandex.cloud.priv.crypto.v1;

import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/crypto/v1;crypto";
option java_outer_classname = "PGS";

service ActionService {
  rpc Start (StartRequest) returns (StartResponse);
  rpc GetResult (GetResultRequest) returns (GetResultResponse);
}

message StartRequest {
  string action_name = 1;
  map<string, string> action_run_params = 2;
}

message StartResponse {
  string action_run_id = 1;
}

message GetResultRequest {
  string action_run_id = 1;
}

message GetResultResponse {
  string action_run_id = 1;
  map<string, string> action_run_params = 2;
  string action_name = 3;
  map<string, string> action_run_result = 4;
  google.protobuf.Timestamp action_run_started_at = 5;
  google.protobuf.Timestamp action_run_completed_at = 6;
  Status action_run_status = 7;
  string action_run_error_message = 8;

  enum Status {
    STATUS_UNSPECIFIED = 0;
    RUNNING = 1;
    SUCCESS = 2;
    FAILED = 3;
  }
}
